--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "formik": "^2.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0", 
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "@mui/material": "^5.11.0", 
+    "@emotion/react": "^11.10.0", 
+    "@emotion/styled": "^11.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
