--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.11.0",
     "cra-template": "1.2.0",
     "formik": "^2.4.6",
-    "react": "^18.2.0", 
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4",
-    "yup": "^1.6.1",
-    "@mui/material": "^5.11.0", 
-    "@emotion/react": "^11.10.0", 
-    "@emotion/styled": "^11.10.0"
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
